--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <span></span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-        <img>
+        <img src="">
 
       </div>
     </div>
